--- a/app/src/main/res/layout/show_listing.xml
+++ b/app/src/main/res/layout/show_listing.xml
@@ -42,6 +42,7 @@
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
+            android:layout_marginBottom="48dp"
             app:layout_constraintTop_toTopOf="parent">
 
 <!--            android:layout_marginStart="4dp"-->
